--- a/.github/workflows/build-wheels.yml
+++ b/.github/workflows/build-wheels.yml
@@ -3,7 +3,7 @@ name: Build Python wheels
 on:
   push:
     branches: [master]
-    tags: "*"
+    tags: ["*"]
   pull_request:
     # Check all PR
 
@@ -28,26 +28,29 @@ jobs:
             rust-target: x86_64-pc-windows-msvc
             platform-name: win_amd64
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
       - name: setup rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: stable
-          default: true
           target: ${{ matrix.rust-target }}
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: 3.8
+          python-version: 3.12
+
       - name: build wheel
         run: |
           pip install wheel
           python setup.py bdist_wheel --plat-name ${{ matrix.platform-name }} --rust-target ${{ matrix.rust-target }}
+
       - uses: actions/upload-artifact@v2
         with:
           name: wheels
           path: dist/*.whl
+
       - name: upload wheel to GitHub release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
@@ -61,19 +64,25 @@ jobs:
     # TODO: add other arch for linux?
     name: x86_64 manylinux2010
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
       - name: build manylinux2010 with rust docker image
         run: docker build -t manylinux2010-with-rust python/build-wheels
+
       - name: build wheel in docker
         run: docker run --rm -v $(pwd):/code manylinux2010-with-rust bash -c "cd /code && /opt/python/cp38-cp38/bin/python setup.py bdist_wheel --rust-target x86_64-unknown-linux-gnu"
+
       - name: run auditwheel in docker
         run: docker run --rm -v $(pwd):/code manylinux2010-with-rust bash -c "auditwheel repair /code/dist/*.whl -w /code/dist"
+
       - name: remove wheel with wrong tag
         run: sudo rm dist/*linux_x86_64.whl
+
       - uses: actions/upload-artifact@v2
         with:
           name: wheels
           path: dist/*.whl
+
       - name: upload wheel to GitHub release
         if: startsWith(github.ref, 'refs/tags/')
         uses: softprops/action-gh-release@v1
