--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,16 +26,17 @@ jobs:
             rust-target: x86_64-unknown-linux-gnu
             build-type: debug
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
       - name: setup rust
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
-          profile: minimal
           toolchain: ${{ matrix.rust-version }}
-          default: true
           target: ${{ matrix.rust-target }}
+
       - name: run tests
         run: cargo test --target ${{ matrix.rust-target }} ${{ matrix.cargo-build-flags }}
+
       - name: check that benchmarks compile and run once
         if: matrix.build-type == 'release'
         run: |
